2005-04-04  Sven Neumann  <sven@gimp.org>

	* app/core/gimpdata.c (gimp_data_create_filename): return early if
	called for an internal data object. Fixes bug #172581.

2005-04-04  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/deinterlace.c (deinterlace): fixed boundary
	conditions that led to incorrect preview (bug #172589).

2005-04-04  Tor Lillqvist  <tml@novell.com>

	* app/widgets/gimpclipboard.c (gimp_clipboard_format_compare): On
	Win32, move the "bmp" format to the front. Means less conversion
	in most cases, as other apps on Win32 typically provide/want the
	BMP format on the Clipboard. (Actually CF_DIB, but that's the
	same, just without the BMP file header.) See also bug #168173.

2005-04-04  Sven Neumann  <sven@gimp.org>

	* plug-ins/FractalExplorer/FractalExplorer.c: fixed typo that
	caused a crash when deleting a fractal from the list (bug #172347).

2005-04-03  Sven Neumann  <sven@gimp.org>

	* configure.in (ALL_LINGUAS): readded "rw" (Kinyarwanda).

2005-04-03  Jakub Steiner <jimmac@ximian.com>

	* themes/Default/images/stock-cursor-16.png
	* themes/Default/images/stock-cursor-24.png
	* themes/Default/images/stock-sample-point-16.png
	* themes/Default/images/stock-sample-point-24.png: touch up a
	little.

2005-04-03  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcursorview.[ch]: fixed spacings and update them
	in GtkWidget::style_set(). Removed lots of cruft from the widget
	this files were copied from, including the GimpContext param
	to gimp_cursor_view_new(). Remember the state of the two color
	frames as aux-info in sessionrc.

	* app/dialogs/dialogs-constructors.c: changed accordingly.

2005-04-03  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcolorframe.c (gimp_color_frame_init): switch
	from a table to a vbox containing hboxes, so the widget's width is
	not determined by the longest label *plus* the longest value.

2005-04-03  Michael Natterer  <mitch@gimp.org>
